src/objects/SnapshotImplantsWonLoss__c.object
<CustomObject>
    <description>Used to capture Won Lost Customers per month for analyzes</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshot Implants WonLoss</relationshipLabel>
        <relationshipName>Snapshot_Implants_WonLoss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImplantsLossType__c</fullName>
        <label>Implants Loss Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplantsLostDate__c</fullName>
        <label>Implants Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImplantsPotentialNet__c</fullName>
        <formula>ImplantsPotential__c * WonLostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implants Potential Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplantsPotential__c</fullName>
        <label>Implants Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplantsWinType__c</fullName>
        <label>Implants Win Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplantsWonDate__c</fullName>
        <label>Implants Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_date__c</fullName>
        <label>Update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WonLostCode__c</fullName>
        <label>Won/Lost Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Snapshot Implants WonLoss</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Snapshot Implants WonLoss Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Implants WonLoss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>